@@ -1,3 +1,4 @@
+2015-08-21 Added updating ranges on check in Animated Page Progress module
 2015-08-21 Fixed sending score in event in Multiple Gap module
 2015-08-20 Fixed adding classes to previous and next buttons in Navigation Bar module
 2015-08-19 Added sending ValueChanged event in Limited Reset module
